# smart-translation

./: .gitignore  Cost-Billing-Analysis.md  Log_02-07.md  Log_06-07.md  Log_09-07.md  Log_20-07.md  Log_26-06.md  Log_29-06.md  background.js  content.js  manifest.json  rules.json
.claude/: metadata.json  settings.json
.github/workflows/: build-tauri.yml  build.yml  tauri-release.yml
.github/workflows-retired/: build.yml
_metadata/generated_indexed_rulesets/: _ruleset1
dashboard/: dashboard.html  dashboard.js  game-controller.js  game-modes.js  game-render.js
design-brief/: DESIGN_BRIEF.md
desktop/: main.js  package-lock.json  package.json  preload-popup.js  preload-search.js  preload.js
desktop/renderer/: api.js  app.js  dom-utils.js  game-controller.js  game-engine.js  game-modes.js  game-render.js  index.html  local-dictionary.js  local-dictionary.json  popup.html  popup.js  search.html  storage-shim.js  theme.js
docs/: electron-to-tauri-migration.md
plans/260715-0121-flashcard-audio-practice-modes/: plan.md
popup/: popup.html  popup.js
semantica-ios/: SETUP.md
semantica-ios/src/: api.js  (+18 more)
semantica-ios/src-tauri/: Cargo.toml  tauri.conf.json
semantica-tauri/: .gitignore
semantica-tauri/src-tauri/: Cargo.toml  tauri.conf.json
semantica-tauri/src-tauri/capabilities/: default.json
semantica-tauri/src-tauri/icons/: icon.icns
semantica-tauri/src-tauri/src/: lib.rs  main.rs
server/: package-lock.json  package.json  schema.sql  test-sepay-webhook.sh  wrangler.toml
utils/: ai-service.js  analysis-cache.js  api-config.js  api-storage-adapter.js  chrome-storage-adapter.js  dom-utils.js  game-engine.js  player.js  storage-adapter.js  storage.js  theme.js  youtube-handler.js
(+37 files in other folders)
